plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.17'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	//spring cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	
	//Caffeine Cache
	implementation 'com.github.ben-manes.caffeine:caffeine'
	
	//spring boot data jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	
	//mysql connector
	implementation 'mysql:mysql-connector-java:8.0.31'
	
	//spring security ,�ϥ� BCryptPasswordEncoder : �[�K �K�X��
	implementation 'org.springframework.boot:spring-boot-starter-security'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
